# machine-spirit

./: .gitignore  CLAUDE.md  README.md  RECOVERY_PROTOCOL.md  SSH_SETUP_GUIDE.md  cam_sentinel.py  cam_watch.py
georgebot/: .gitignore  FIELD_MANUAL.md  GEORGEBOT_QUICKSTART.txt  PLATFORM.md  README.md  config.py  georgebot.py  pyproject.toml  session.py
georgebot/RAG/: .gitkeep
georgebot/clients/: __init__.py  base.py  grok.py  ollama.py
georgebot/models/: georgebot-build.Modelfile  georgebot-chat.Modelfile  georgebot-plan.Modelfile
machinespirit/: .gitignore  LICENSE  README.md  VOICE_STYLE.md  config.example.py  convo.py  extract_docx.py  machinespirit.py  ollama.py  scam_microsoft.txt  scam_tax.txt  session.py  talkytalk.bat  talkytalk.py  talkytalk_linux.py
machinespirit2/: .gitignore  README.md  machinespirit.py
runpod/: README.md  admin.html  pyproject.toml  runpod_ssh.py  start.sh
runpod/machine_spirit_runpod/: __init__.py  setup.py
talkytalk/: .gitignore  CLAUDE.md  README.md  SETUP.md  config.py  pyproject.toml  rag.py  say.sh  talkytalk.py  talkytalk.sh
talkytalk/models/: talkytalk.Modelfile
