## ============================================================
## PYPROJECT.TOML - Package configuration for georgebot
## ============================================================
## pip install -e . makes 'georgebot' command available
## ============================================================

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "georgebot"
version = "0.1.0"
description = "Multi-brain Aussie voice assistant for Windows"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "George Wu"}
]

dependencies = [
    "requests>=2.28.0",
    "elevenlabs>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
georgebot = "georgebot:main"

[tool.setuptools]
py-modules = ["georgebot", "config", "rag", "session"]

[tool.setuptools.packages.find]
where = ["."]
include = ["clients*"]
