[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "machine-spirit-runpod"
version = "0.1.0"
description = "RunPod cloud deployment for Machine Spirit — Open WebUI + Ollama + ElevenLabs TTS + Claude"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "George Wu"}
]

dependencies = [
    "open-webui>=0.7.0",
    "elevenlabs>=1.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
machine-spirit-setup = "machine_spirit_runpod.setup:main"
