[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talkytalk"
version = "0.1.0"
description = "Voice pipeline - ElevenLabs TTS with Windows SAPI fallback"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "George Wu"}
]

dependencies = [
    "elevenlabs>=1.0.0",
    "requests>=2.28.0",
]

[project.scripts]
talkytalk = "talkytalk:main"
say = "talkytalk:main"

[tool.setuptools]
py-modules = ["talkytalk", "config"]
